# ml-diabetes-prediction

./: .deploymentignore  .gitignore  README.md  model.pkl  pyproject.toml  requirements.txt  thunder-predict-request.json
api/: main.py  schema.py
deployment/: azure-container-apps.md  deploy_containerapps.sh  deployment image.docx  env.sample  update_containerapss_image.sh
notebooks/: diabetes_notebook.ipynb
src/models/: predict.py  train.py
src/utils/: helpers.py
